tests/errors/test_04.x
// Identifier undeclared

fn main() -> int {
    let x: int = y;
}